force-app/main/default/objects/Call_Report_Attendees__c/Call_Report_Attendees__c.object-meta.xml
<CustomObject>
    <description>Case 4296 Changed Name field from text to autonumber</description>
    <label>Event Report Attendees</label>
    <nameField>
        <displayFormat>ERA-{0000000000}</displayFormat>
        <label>Event Report Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Report Attendeess</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>