force-app/main/default/objects/Call_Report_Attendees__c/fields/Call_Report__c.field-meta.xml
<CustomField>
    <fullName>Call_Report__c</fullName>
    <label>Event Report</label>
    <referenceTo>Call_Report__c</referenceTo>
    <relationshipLabel>Event Report Attendees</relationshipLabel>
    <relationshipName>Call_Report_Attendeess</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>