force-app/main/default/objects/Call_Report_Attendees__c/fields/Client_Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Client_Team_Role__c</fullName>
    <description>Will contain the role corresponding to the CST user in the related Client w.r.t to EN 661</description>
    <label>Client Team Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>