force-app/main/default/objects/Call_Report_Attendees__c/fields/CompositeKey__c.field-meta.xml
<CustomField>
    <fullName>CompositeKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is updated by workflow field update when the attendee is inserted. It&apos;s value is derived from concatenating the Call_Report and the Contact Id&apos;s. These two fields make an attendee unique per call report

Case 4296 - Event Report Enhancements</description>
    <externalId>true</externalId>
    <label>CompositeKey</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>