force-app/main/default/objects/Call_Report_Attendees__c/fields/Contact_Category__c.field-meta.xml
<CustomField>
    <fullName>Contact_Category__c</fullName>
    <description>Will contain the role corresponding to the contact in the related Client w.r.t to EN 661</description>
    <label>Contact Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>