force-app/main/default/objects/Call_Report_Attendees__c/fields/Contact_id__c.field-meta.xml
<CustomField>
    <fullName>Contact_id__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Case 4296 Changed label</description>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>Contact must be active.</errorMessage>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Reports Associated</relationshipLabel>
    <relationshipName>Call_Report_Attendeess</relationshipName>
    <type>Lookup</type>
</CustomField>