force-app/main/default/objects/Call_Report_Attendees__c/fields/Contact_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Id__c</fullName>
    <description>Technical field to avoid query in Trigger.
Display related Contact Owner Id</description>
    <formula>Contact_id__r.OwnerId</formula>
    <label>Contact Owner Id</label>
    <type>Text</type>
</CustomField>