force-app/main/default/objects/Call_Report_Attendees__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <formula>IF( ContactRecordType__c   =  &quot;012200000005Fgn&quot;, &quot;Internal&quot;, &quot;External&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Type</label>
    <type>Text</type>
</CustomField>