force-app/main/default/objects/Call_Report_Attendees__c/fields/ContactRecordType__c.field-meta.xml
<CustomField>
    <fullName>ContactRecordType__c</fullName>
    <formula>Contact_id__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactRecordType</label>
    <type>Text</type>
</CustomField>