force-app/main/default/objects/Call_Report_Attendees__c/fields/Costs_Per_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Costs_Per_Attendee__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;Attended&apos;) , Call_Report__r.Total_Event_Costs__c/ Call_Report__r.Number_Of_Attended_Attendees__c   , null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Per Attendee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>