force-app/main/default/objects/Call_Report_Attendees__c/fields/ExtContactId__c.field-meta.xml
<CustomField>
    <fullName>ExtContactId__c</fullName>
    <externalId>true</externalId>
    <label>ExtContactId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>