force-app/main/default/objects/Call_Report_Attendees__c/fields/Related_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Related_Agenda__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Agenda to which the submission attendees are associated to</description>
    <inlineHelpText>Agenda to which the submission attendees are associated to</inlineHelpText>
    <label>Related Agenda</label>
    <referenceTo>Agenda__c</referenceTo>
    <relationshipLabel>Event Report Attendees</relationshipLabel>
    <relationshipName>Call_Report_Attendeess</relationshipName>
    <type>Lookup</type>
</CustomField>