force-app/main/default/objects/Call_Report_Attendees__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <description>To store the status of Email being sent to Invited Attendees

Case 4296 : Event Report Enhancements: Relabeled Field from Send Email to Distribution</description>
    <label>Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>