force-app/main/default/objects/Call_Report_Attendees__c/fields/Type_of_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Attendee__c</fullName>
    <description>US-1212: Created for Meeting Console in order to identify the type of Attendee that we select via console</description>
    <label>Type of Attendee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Committee Attendee</fullName>
            </value>
            <value>
                <fullName>Submission Attendee</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>